--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -39,6 +39,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  --font-sans: var(--font-sarabun);
+  --font-mono: var(--font-line-seed-sans);
 }
 
 :root {
@@ -122,5 +125,4 @@
 @theme {
   --font-line-seed-sans: "var(--font-line-seed-sans)", sans-serif;
   --font-sarabun: "var(--font-sarabun)", sans-serif;
-  --font-inter: "var(--font-inter)", sans-serif;
 }
